nlp/admin/web/src/app/nlp-admin-app.component.css
/*
 * Copyright (C) 2017 VSCT
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.tock-sidenav {
  padding: 10px;
  min-width: 100px;
  overflow-y: visible;
}

.menu-close {
  position: absolute;
  right: 0;
}

.tock-menu-button {
  min-width: 20px;
}

.tock-title {
  text-decoration: none;
  color: white;
  padding-left: 5px;
}

.tock-toolbar-menu {
  padding: 0 14px 0 14px;
  color: white;
}

.fill-remaining-space {
  flex: 1 1 auto;
}

.tock-icon-button {
  box-shadow: none;
  user-select: none;
  background: none;
  border: none;
  cursor: pointer;
  filter: none;
  font-weight: normal;
  height: auto;
  line-height: inherit;
  margin: 0;
  min-width: 0;
  padding: 0;
  text-align: left;
  text-decoration: none;
}

.select-application{
  width:200px;
}

